# Lua

./: .gitignore  CMakeLists.txt  fips.yml  zany80_deps.cpp.tags
headers/: LuaImGuiBindings.hpp  LuaOryolBindings.hpp  LuaPlugin.hpp  worker_thread.hpp
plugins/DynamicRecompiler/: main.lua
src/: LuaImGuiBindings.cpp  LuaOryolBindings.cpp  LuaPlugin.cpp  config.h.in  main.cpp
tools/: gen_tags.sh
